syntax = "proto3";

option java_package = "io.ennoo.fabric-client.grpc.proto.chain";
option java_outer_classname = "ServerProto";
option go_package = "grpc/proto/chain";

package chain;

import "grpc/proto/chain/result.proto";
import "grpc/proto/chain/channel.proto";
import "grpc/proto/chain/chaincode.proto";
import "grpc/proto/chain/ledger.proto";
import "grpc/proto/chain/config.proto";

service LedgerChannel {
    rpc Create (ChannelCreate) returns (Result) {
    }
    rpc Join (ChannelJoin) returns (Result) {
    }
    rpc List (ChannelList) returns (ResultArr) {
    }
}

service LedgerChainCode {
    rpc UploadCC (stream Upload) returns (ResultUpload) {
    }
    rpc InstallCC (Install) returns (Result) {
    }
    rpc InstalledCC (Installed) returns (ResultCCList) {
    }
    rpc InstantiateCC (Instantiate) returns (Result) {
    }
    rpc InstantiatedCC (Instantiated) returns (ResultCCList) {
    }
    rpc UpgradeCC (Upgrade) returns (Result) {
    }
    rpc InvokeCC (Invoke) returns (Result) {
    }
    rpc InvokeCCAsync (InvokeAsync) returns (Result) {
    }
    rpc QueryCC (Query) returns (Result) {
    }
}

service Ledger {
    rpc QueryLedgerInfo (ReqInfo) returns (ResultChannelInfo) {
    }
    rpc QueryLedgerBlockByHeight (ReqBlockByHeight) returns (ResultBlock) {
    }
    rpc QueryLedgerBlockByHash (ReqBlockByHash) returns (ResultBlock) {
    }
    rpc QueryLedgerBlockByTxID (ReqBlockByTxID) returns (ResultBlock) {
    }
    rpc QueryLedgerInfoSpec (ReqInfoSpec) returns (ResultChannelInfo) {
    }
    rpc QueryLedgerBlockByHeightSpec (ReqBlockByHeightSpec) returns (ResultBlock) {
    }
    rpc QueryLedgerBlockByHashSpec (ReqBlockByHashSpec) returns (ResultBlock) {
    }
    rpc QueryLedgerBlockByTxIDSpec (ReqBlockByTxIDSpec) returns (ResultBlock) {
    }
}

service LedgerConfig {
    rpc ListConfig (ReqConfigList) returns (ResultConfigList) {
    }
    rpc GetConfig (ReqConfig) returns (ResultConfig) {
    }
    rpc InitConfig (ReqInit) returns (Result) {
    }
}